[gd_scene load_steps=9 format=3 uid="uid://dsbs0p6s5417y"]

[ext_resource type="Script" uid="uid://c4jowl34h8t2k" path="res://script/UI/upgrade_panel.gd" id="1_msqw4"]
[ext_resource type="Texture2D" uid="uid://qfgu15h40rpo" path="res://texture/UI01/cuirass/9.png" id="2_q2ytr"]
[ext_resource type="PackedScene" uid="uid://dxuwxheh8fch2" path="res://Scene/UI/item_slot.tscn" id="3_qr68l"]
[ext_resource type="Texture2D" uid="uid://5q5opapct313" path="res://texture/All Icons.png" id="4_83cy7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h0sg7"]
texture = ExtResource("2_q2ytr")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_msqw4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q2ytr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4bf44"]
atlas = ExtResource("4_83cy7")
region = Rect2(64, 32, 16, 16)

[node name="UpgradePanel" type="Control"]
custom_minimum_size = Vector2(700, 450)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msqw4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h0sg7")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -148.0
offset_right = 274.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tiệm Rèn"
horizontal_alignment = 1

[node name="InfoLabel" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ItemToUpgradeSlot" parent="Panel/HBoxContainer/VBoxContainer" instance=ExtResource("3_qr68l")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UpgradeButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Đồng ý"

[node name="CancelButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bỏ đi"

[node name="PanelContainer" type="PanelContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_msqw4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q2ytr")

[node name="HeroInventoryGrid" type="GridContainer" parent="Panel/HBoxContainer/PanelContainer/ScrollContainer" groups=["%HeroInventoryGrid"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 7
theme_override_constants/v_separation = 7
columns = 5

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 603.0
offset_top = 5.0
offset_right = 643.0
offset_bottom = 47.0
icon = SubResource("AtlasTexture_4bf44")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_button_pressed"]
